Capturing a canvas that is not in the DOM can lead to erratic frame rates or no frame emission at all https://bugs.webkit.org/show_bug.cgi?id=240380

Patch by Dan Glastonbury <djg@apple.com> on 2022-05-25
Reviewed by Simon Fraser.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::canvasChanged):
Schedule a rendering update whenever a canvas with out a rect needing display
preparation is added. This ensures that the prepareForDisplay is called on all
pending canvases, since this is handled in doAfterUpdateRendering.
* Source/WebCore/dom/Document.h:
Update size of RenderingUpdateState to accomodate PrepareCanvasesForDisplay.
* Source/WebCore/page/Page.cpp:
* Source/WebCore/page/Page.h:
Introduce new RenderingUpdateStep, PrepareCanvasesForDisplay, which signals that
prepareCanvasesForDisplayInNeeded() needs to be called from
doAfterRenderingUpdate(). Update size of RenderingUpdateState to accomodate
PrepareCanvasesForDisplay.
* LayoutTests/fast/mediacapturefromelement/CanvasCaptureMediaStream-capture-out-of-DOM-canvas-expected.txt: Added.
* LayoutTests/fast/mediacapturefromelement/CanvasCaptureMediaStream-capture-out-of-DOM-canvas.html:
Test that frame rate of captured video from out-of-DOM canvas is with in 25% of
the generating frame rate.

Canonical link: https://commits.webkit.org/250996@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294864 268f45cc-cd09-0410-ab3c-d52691b4dbfc